unpackaged/main/default/objects/Conversion_Mapping__c/Conversion_Mapping__c.object-meta.xml
<CustomObject>
    <description>This object is meant for the conversion mapping information for all the fields of the application and its children to loan account and its children respectively. Refer to particular fields for their description and populate the values carefully.</description>
    <label>Conversion Mapping</label>
    <nameField>
        <displayFormat>CMV-{0000}</displayFormat>
        <label>Conversion Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>