unpackaged/main/default/objects/Conversion_Mapping__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>This field is meant for providing default values for some fields on the loan account object. It only works if the Target Object(loan__Loan_Account__c) and Field values are populated.</description>
    <inlineHelpText>This field is meant for providing default values for some fields on the loan account object. It only works if the Target Object(loan__Loan_Account__c) and Field values are populated.</inlineHelpText>
    <label>Default Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>