unpackaged/main/default/objects/Conversion_Mapping__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <description>This field is only reserved for the child objects at the source level and carries the API name of the application lookup on them. So that we could query those child records such as applicants, rate schedules and properties corresponding the application we are converting.</description>
    <inlineHelpText>This field is only reserved for the child objects at the source level and carries the API name of the application lookup on them. So that we could query those child records such as applicants, rate schedules and properties for the app.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>