unpackaged/main/default/objects/Conversion_Mapping__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field specified if the target field is required to be populated.</description>
    <inlineHelpText>This field specified if the target field is required to be populated.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>