unpackaged/main/default/objects/Conversion_Mapping__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>API name of the target’s parent’s lookup. This field is only reserved for the target’s child records such as rate schedules, collaterals and parties.</description>
    <inlineHelpText>API name of the target’s parent’s lookup. This field is only reserved for the target’s child records such as rate schedules, collaterals and parties.</inlineHelpText>
    <label>Parent Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>