unpackaged/main/default/objects/Conversion_Mapping__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>The API name of the field which will be mapped to the target field on the target object.</description>
    <inlineHelpText>The API name of the field which will be mapped to the target field on the target object.</inlineHelpText>
    <label>Source Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>