unpackaged/main/default/objects/Conversion_Mapping__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The API name of the source object, whether it's a parent or a child object.</description>
    <inlineHelpText>The API name of the source object, whether it's a parent or a child object.</inlineHelpText>
    <label>Source Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>