unpackaged/main/default/objects/Conversion_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>The API name of the field which will be mapped from the source field on the source object.</description>
    <inlineHelpText>The API name of the field which will be mapped from the source field on the source object.</inlineHelpText>
    <label>Target Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>