unpackaged/main/default/objects/Conversion_Mapping__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>The API name of the target object, whether it's a parent or a child object.</description>
    <inlineHelpText>The API name of the target object, whether it's a parent or a child object.</inlineHelpText>
    <label>Target Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>