unpackaged/main/default/objects/Conversion_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Filter_Criteria__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Mandatory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>